--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,8 @@ dependencies:
   flutter:
     sdk: flutter
 
-  flutter_bloc: ^8.1.1
+  flutter_bloc: 7.2.0
+  dio: 4.0.4
 
 
   # The following adds the Cupertino Icons font to your application.
